update examples/RAG-with-Fine-Tuned-Models notebook

--- a/examples/RAG-with-Fine-Tuned-Models.ipynb
+++ b/examples/RAG-with-Fine-Tuned-Models.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# LlamaIndex Integration Demo"
+    "# Setups"
    ]
   },
   {
@@ -14,18 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import OpenSSA package \"live\" from the source code\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "sys.path.insert(0, str(Path('../../').resolve()))\n",
-    "\n",
-    "import textwrap\n",
-    "\n",
-    "# Configure logging for some informative output\n",
-    "from openssa import logger, mlogger\n",
-    "# mlogger.setLevel(logger.DEBUG)\n",
-    "# logger.setLevel(logger.DEBUG)\n",
-    "# logger.info(\"Working directory: %s\", Path.cwd())\n"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
    ]
   },
   {
@@ -34,138 +30,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openssa import LlamaIndexSSM\n",
-    "ssm = LlamaIndexSSM(name=\"phu\")\n",
-    "ssm.read_directory()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'role': 'assistant',\n",
-       " 'content': 'Phu is a technology advisor and investor who has been working in the field for over 16 years. They have experience working with organizations such as Diasporic Vietnamese Artists Network (DVAN) and Materiall. Phu has also been involved in the explosive growth of the internet during their time at Yahoo.'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.discuss(\"Who is Phu?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"What are some of the companies Phu has worked with?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Did Phu go to any university?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'role': 'assistant',\n",
-       " 'content': 'Phu Hoang had various roles and responsibilities during his time at Yahoo. He worked on Yahoo Search, Yahoo Classifieds, Yahoo Metros and Local, Yahoo Marketplace, Yahoo Ads Systems, Yahoo Sports, Yahoo Shopping, Yahoo Auctions, Yahoo PayDirect, Yahoo Billing, Yahoo Commerce Division, Yahoo Media Division, Yahoo Web Search Division (Yahoo, Inktomi, AltaVista, Fast), Yahoo Search Marketing (Overture), and Yahoo Communications and Communities.'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ssm.discuss(\"List the things Phu did at Yahoo!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from pathlib import Path\n",
     "\n",
-    "from openssa import LlamaIndexSSM\n",
-    "ssm = LlamaIndexSSM(name=\"avv\")\n",
-    "ssm.read_website([\n",
-    "    \"https://www.avv.co/\",\n",
-    "    \"https://www.avv.co/porfolio/\",\n",
-    "    \"https://www.avv.co/team/\",\n",
-    "    \"https://www.avv.co/about-us/\",\n",
-    "    \"https://www.avv.co/careers/\"\n",
-    "    ],\n",
-    "    use_existing_index=True)\n",
-    "# ssm.save()"
+    "from llama_index.core import indices\n",
+    "from llama_index.core.settings import Settings\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Informational Resource(s)"
    ]
   },
   {
@@ -174,342 +49,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(textwrap.fill(ssm.discuss(\"What is AVV?\")[0]['content'], width=80))"
+    "RESOURCE_PATH = Path() / 'FinanceBench' / '.data' / 'docs' / 'AMD_2022_10K'\n",
+    "assert RESOURCE_PATH.is_dir()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(textwrap.fill(ssm.discuss(\"Who are the people at AVV?\")[0]['content'], width=80))"
+    "# RAG with Default Models"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(textwrap.fill(ssm.discuss(\"Who is Binh?\")[0]['content'], width=80))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(textwrap.fill(ssm.discuss(\"Who is Eddie?\")[0]['content'], width=80))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(textwrap.fill(ssm.discuss(\"Is AVV a good firm?\")[0]['content'], width=80))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Who are the people at AVV?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Who is Christopher?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = ssm.discuss(\"Who is Yann?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(x[0][\"content\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.read_gdrive(\"1KQBtnpILq8SMZgTR2j6AimceZN-XnydL\", use_existing_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Who are Yann and Christopher?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Are there things where Yann and Christopher do not agree on?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"What are the main points of agreement between Yann and Christopher?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Which of the two papers is likely to be implemented in the near future?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"Which architecture is likely to be implemented imperatively?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openssa.core.ssm.rag_ssm import RAGSSM\n",
-    "ssm = RAGSSM()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.read_directory(\".openssa/ylecun\", use_existing_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.discuss(\"What is the deal?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.slm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssm.read_gdrive(\"1KQBtnpILq8SMZgTR2j6AimceZN-XnydL\", use_existing_index=True, project_name=\"ylecun\")"
+    "# RAG with Fine-Tuned Models"
    ]
   }
  ],
@@ -529,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
