update examples/RAG-with-Fine-Tuned-Models notebook

--- a/examples/RAG-with-Fine-Tuned-Models.ipynb
+++ b/examples/RAG-with-Fine-Tuned-Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from llama_index.core import indices\n",
-    "from llama_index.core.settings import Settings\n"
+    "from llama_index.core.indices import VectorStoreIndex\n",
+    "from llama_index.core.readers.file.base import SimpleDirectoryReader\n",
+    "from llama_index.core.settings import Settings"
    ]
   },
   {
@@ -58,6 +59,29 @@
    "metadata": {},
    "source": [
     "# RAG with Default Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = SimpleDirectoryReader(input_dir=RESOURCE_PATH,\n",
+    "                                  input_files=None,\n",
+    "                                  exclude=None,\n",
+    "                                  exclude_hidden=True,\n",
+    "                                  errors='strict',\n",
+    "                                  recursive=True,\n",
+    "                                  encoding='utf-8',\n",
+    "                                  filename_as_id=False,\n",
+    "                                  required_exts=None,\n",
+    "                                  file_extractor=None,\n",
+    "                                  num_files_limit=None,\n",
+    "                                  file_metadata=None,\n",
+    "                                  fs=None)\n",
+    "\n",
+    "index = VectorStoreIndex.from_documents(documents)"
    ]
   },
   {
