update examples/RAG-with-Fine-Tuned-Models notebook

--- a/examples/RAG-with-Fine-Tuned-Models.ipynb
+++ b/examples/RAG-with-Fine-Tuned-Models.ipynb
@@ -9,12 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,20 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Aitom\\OneDrive\\CODE\\Windows\\OpenSSA\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Parsing nodes: 100%|██████████| 121/121 [00:00<00:00, 608.15it/s]\n",
-      "Generating embeddings: 100%|██████████| 140/140 [00:01<00:00, 85.03it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "documents = SimpleDirectoryReader(input_dir=RESOURCE_PATH,\n",
     "                                  input_files=None,\n",
@@ -104,20 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'AMD'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query_engine.query('Which company do you know well?').response"
    ]
