update examples/Planning-and-Reasoning.ipynb notebook

--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -64,8 +64,9 @@
     "\n",
     "from openssa import (Agent,\n",
     "                     HTP, AutoHTPlanner,\n",
-    "                     OodaReasoner,\n",
-    "                     FileResource)"
+    "                     BaseReasoner, OodaReasoner,\n",
+    "                     FileResource,\n",
+    "                     Task)"
    ]
   },
   {
@@ -95,6 +96,32 @@
     "\n",
     "resource = FileResource(RESOURCE_PATH)\n",
     "display(Markdown(resource.overview))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task = Task(ask=PROBLEM, resources={resource})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Reasoning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basic_reasoner = BaseReasoner()\n",
+    "display(Markdown(basic_reasoner.reason(task=task)))"
    ]
   },
   {
