--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -99,19 +99,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "task = Task(ask=PROBLEM, resources={resource})"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Reasoning"
+    "# Base Reasoning"
    ]
   },
   {
@@ -121,7 +112,24 @@
    "outputs": [],
    "source": [
     "basic_reasoner = BaseReasoner()\n",
-    "display(Markdown(basic_reasoner.reason(task=task)))"
+    "display(Markdown(basic_reasoner.reason(task=Task(ask=PROBLEM, resources={resource}))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OODA Reasoning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ooda_reasoner = OodaReasoner()\n",
+    "display(Markdown(ooda_reasoner.reason(task=Task(ask=PROBLEM, resources={resource}))))"
    ]
   },
   {
@@ -243,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
