update examples/Planning-and-Reasoning notebook

--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -111,8 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basic_reasoner = BaseReasoner()\n",
-    "display(Markdown(basic_reasoner.reason(task=Task(ask=PROBLEM, resources={resource}))))"
+    "base_reasoner = BaseReasoner()\n",
+    "display(Markdown(base_reasoner.reason(task=Task(ask=PROBLEM, resources={resource}))))"
    ]
   },
   {
