update examples/Planning-and-Reasoning notebook

--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_1 = agent.solve(PROBLEM)\n",
+    "solution_1 = agent.solve(PROBLEM, dynamic=False)\n",
     "display(Markdown(solution_1))"
    ]
   },
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_2 = agent.solve(PROBLEM, plan=expert_plan)\n",
+    "solution_2 = agent.solve(PROBLEM, plan=expert_plan, dynamic=False)\n",
     "display(Markdown(solution_2))"
    ]
   }
