--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -111,8 +111,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_reasoner = BaseReasoner()\n",
-    "display(Markdown(base_reasoner.reason(task=Task(ask=PROBLEM, resources={resource}))))"
+    "agent = Agent(planner=None,\n",
+    "              reasoner=BaseReasoner(),\n",
+    "              resources={resource})\n",
+    "pprint(agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(agent.solve(PROBLEM)))"
    ]
   },
   {
@@ -128,8 +139,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ooda_reasoner = OodaReasoner()\n",
-    "display(Markdown(ooda_reasoner.reason(task=Task(ask=PROBLEM, resources={resource}))))"
+    "agent = Agent(planner=None,\n",
+    "              reasoner=OodaReasoner(),\n",
+    "              resources={resource})\n",
+    "pprint(agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(agent.solve(PROBLEM)))"
    ]
   },
   {
