--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -65,8 +65,7 @@
     "from openssa import (Agent,\n",
     "                     HTP, AutoHTPlanner,\n",
     "                     BaseReasoner, OodaReasoner,\n",
-    "                     FileResource,\n",
-    "                     Task)"
+    "                     FileResource)"
    ]
   },
   {
@@ -111,10 +110,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = Agent(planner=None,\n",
-    "              reasoner=BaseReasoner(),\n",
-    "              resources={resource})\n",
-    "pprint(agent)"
+    "base_reasoning_agent = Agent(planner=None,\n",
+    "                             reasoner=BaseReasoner(),\n",
+    "                             resources={resource})\n",
+    "pprint(base_reasoning_agent)"
    ]
   },
   {
@@ -123,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(Markdown(agent.solve(PROBLEM)))"
+    "display(Markdown(base_reasoning_agent.solve(PROBLEM)))"
    ]
   },
   {
@@ -139,10 +138,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = Agent(planner=None,\n",
-    "              reasoner=OodaReasoner(),\n",
-    "              resources={resource})\n",
-    "pprint(agent)"
+    "ooda_reasoning_agent = Agent(planner=None,\n",
+    "                             reasoner=OodaReasoner(),\n",
+    "                             resources={resource})\n",
+    "pprint(ooda_reasoning_agent)"
    ]
   },
   {
@@ -151,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(Markdown(agent.solve(PROBLEM)))"
+    "display(Markdown(ooda_reasoning_agent.solve(PROBLEM)))"
    ]
   },
   {
