--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = Agent(planner=AutoHTPlanner(max_depth=3, max_subtasks_per_decomp=9),\n",
+    "agent = Agent(planner=AutoHTPlanner(max_depth=3, max_subtasks_per_decomp=3),\n",
     "              reasoner=OodaReasoner(),\n",
     "              resources={resource})\n",
     "pprint(agent)"
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_1 = agent.solve(PROBLEM, dynamic=False)\n",
+    "solution_1 = agent.solve(PROBLEM)\n",
     "display(Markdown(solution_1))"
    ]
   },
