--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "from pprint import pprint\n",
-    "from IPython.display import display, Markdown, Pretty"
+    "from IPython.display import display, Markdown"
    ]
   },
   {
@@ -35,16 +35,6 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()"
    ]
   },
   {
@@ -60,12 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "from openssa import (Agent,\n",
-    "                     HTP, AutoHTPlanner,\n",
-    "                     BaseReasoner, OodaReasoner,\n",
-    "                     FileResource)"
+    "from openssa import Agent, HTP, AutoHTPlanner, OodaReasoner, FileResource\n",
+    "from FinanceBench.data import cache_dir_path"
    ]
   },
   {
@@ -90,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESOURCE_PATH = Path() / 'FinanceBench' / '.data' / 'docs' / 'AMD_2022_10K'\n",
+    "RESOURCE_PATH = cache_dir_path(doc_name='AMD_2022_10K')\n",
     "assert RESOURCE_PATH.is_dir()\n",
     "\n",
     "resource = FileResource(RESOURCE_PATH)\n",
@@ -101,35 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Reasoning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_reasoning_agent = Agent(planner=None,\n",
-    "                             reasoner=BaseReasoner(),\n",
-    "                             resources={resource})\n",
-    "pprint(base_reasoning_agent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(Markdown(base_reasoning_agent.solve(PROBLEM)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# OODA Reasoning"
+    "# OODA Reasoning: 1 single pass"
    ]
   },
   {
@@ -157,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agent with Planning & Reasoning"
+    "# Agent with Hierarchical Task Planning (HTP) & OODA Reasoning"
    ]
   },
   {
@@ -176,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem-Solving with Automated Planner"
+    "## Problem-Solving with Automated Dynamic Planning (default)"
    ]
   },
   {
@@ -185,25 +143,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auto_plan = agent.planner.plan(PROBLEM)\n",
-    "pprint(auto_plan)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solution_1 = agent.solve(PROBLEM)\n",
-    "display(Markdown(solution_1))"
+    "display(Markdown(agent.solve(PROBLEM)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem-Solving with Expert-Specified Plan"
+    "## Problem-Solving with Automated Static Planning\n",
+    "\n",
+    "(this tends to produce the worst result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(agent.solve(PROBLEM, dynamic=False)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem-Solving with Expert-Specified Static Planning"
    ]
   },
   {
@@ -251,8 +216,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_2 = agent.solve(PROBLEM, plan=expert_plan, dynamic=False)\n",
-    "display(Markdown(solution_2))"
+    "display(Markdown(agent.solve(PROBLEM, plan=expert_plan, dynamic=False)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem-Solving with Expert-Guided Dynamic Planning\n",
+    "\n",
+    "(this tends to product the best result)"
    ]
   }
  ],
