update examples/Planning-and-Reasoning notebook to overcome current-working-directory bug in running Jupyter Notebooks in VSCode

--- a/examples/Planning-and-Reasoning.ipynb
+++ b/examples/Planning-and-Reasoning.ipynb
@@ -33,8 +33,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "if cwd_is_root := ('examples' in os.listdir()):\n",
+    "    sys.path.append('examples')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "\n",
+    "load_dotenv(dotenv_path=Path('examples' if cwd_is_root else '.') / '.env')"
    ]
   },
   {
