--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +60,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "The chief ENTITY/ENTITIES of interest in the resource are 3M COMPANY. The main TIME PERIOD(S) of interest are the year ended December 31, 2018. The key KINDS of INFO contained in the resource include details about the company's business segments, financial statements, risk factors, legal proceedings, properties, market for common equity, management's discussion and analysis of financial condition, results of operations, quantitative and qualitative disclosures about market risk, financial instruments, acquisitions, financial statements, supplementary data, information about the company's environmental remediation efforts, and details about the company's executive officers, directors, corporate governance, executive compensation, and asset impairments."
+       "The main ENTITY of interest in the resource is 3M COMPANY, a Delaware corporation. The main TIME PERIOD of interest is the fiscal year ended December 31, 2018. The key KINDS of INFO contained in the resource include details about the company's business segments, financial statements, management's discussion and analysis of financial condition and results of operations, information on properties, legal proceedings, risk factors, market for common equity, and disclosures about market risk. Additionally, the resource covers information on acquisitions, fair value measurements, financial reporting responsibilities, and details about the company's directors, executive officers, corporate governance, and executive compensation. The document also includes information on asset impairments, goodwill testing, and details about the company's code of ethics."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +167,7 @@
       "Agent(planner=None,\n",
       "      reasoner=OodaReasoner(lm=OpenAILM(model='gpt-4-1106-preview',\n",
       "                                        api_base='https://api.openai.com/v1',\n",
-      "                                        client=<openai.OpenAI object at 0x1553146b0>)),\n",
+      "                                        client=<openai.OpenAI object at 0x154f93200>)),\n",
       "      resources={FileResource(path=PosixPath('/Users/quynhle/Desktop/project-local/st-openssa/openssa/examples/FinanceBench/.data/docs/3M_2018_10K'))})\n"
      ]
     }
@@ -172,20 +181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/markdown": [
-       "Based on the provided context information, it is not possible to determine the liquidity profile of AMD based on its FY22 Quick Ratio. The information provided pertains to 3M Company and its financial statements, debt structure, liquidity management, and other related details. The context does not mention any information about AMD, its financials, or its Quick Ratio for the fiscal year 2022. Therefore, it is not feasible to assess AMD's liquidity profile based on the FY22 Quick Ratio using the information available in the provided text."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "AttributeError",
+     "evalue": "'FileResource' object has no attribute 'other_results'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/quynhle/Desktop/project-local/st-openssa/openssa/examples/Tutorial.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/quynhle/Desktop/project-local/st-openssa/openssa/examples/Tutorial.ipynb#X56sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m display(Markdown(ooda_reasoning_agent\u001b[39m.\u001b[39;49msolve(PROBLEM)))\n",
+      "File \u001b[0;32m~/Desktop/project-local/st-openssa/openssa/openssa/l2/agent/agent.py:97\u001b[0m, in \u001b[0;36mAgent.solve\u001b[0;34m(self, problem, plan, dynamic)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[39mmatch\u001b[39;00m (plan, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mplanner, dynamic):\n\u001b[1;32m     93\u001b[0m \n\u001b[1;32m     94\u001b[0m     \u001b[39m# NO PLAN\u001b[39;00m\n\u001b[1;32m     95\u001b[0m     \u001b[39mcase\u001b[39;00m\u001b[39m \u001b[39m(\u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m, \u001b[39m_\u001b[39;00m):\n\u001b[1;32m     96\u001b[0m         \u001b[39m# if neither Plan nor Planner is given, directly use Reasoner\u001b[39;00m\n\u001b[0;32m---> 97\u001b[0m         result: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreasoner\u001b[39m.\u001b[39;49mreason(task\u001b[39m=\u001b[39;49mTask(ask\u001b[39m=\u001b[39;49mproblem, \n\u001b[1;32m     98\u001b[0m                                            resources\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mresources), \n\u001b[1;32m     99\u001b[0m                                            knowledge\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mknowledge, \n\u001b[1;32m    100\u001b[0m                                            other_results\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m)\n\u001b[1;32m    102\u001b[0m     \u001b[39m# AUTOMATED STATIC PLAN\u001b[39;00m\n\u001b[1;32m    103\u001b[0m     \u001b[39mcase\u001b[39;00m\u001b[39m \u001b[39m(\u001b[39mNone\u001b[39;00m, \u001b[39m_\u001b[39;00m, \u001b[39mFalse\u001b[39;00m) \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mplanner:\n\u001b[1;32m    104\u001b[0m         \u001b[39m# if no Plan is given but Planner is, and if solving statically,\u001b[39;00m\n\u001b[1;32m    105\u001b[0m         \u001b[39m# then use Planner to generate static Plan,\u001b[39;00m\n\u001b[1;32m    106\u001b[0m         \u001b[39m# then execute such static Plan\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/project-local/st-openssa/openssa/openssa/l2/reasoning/ooda/__init__.py:41\u001b[0m, in \u001b[0;36mOodaReasoner.reason\u001b[0;34m(self, task, knowledge, other_results, n_words)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreason\u001b[39m(\u001b[39mself\u001b[39m, task: ATask, \u001b[39m*\u001b[39m, knowledge: \u001b[39mset\u001b[39m[Knowledge], other_results: \u001b[39mlist\u001b[39m \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, n_words: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mstr\u001b[39m:\n\u001b[1;32m     34\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Work through Task and return conclusion.\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \n\u001b[1;32m     36\u001b[0m \u001b[39m    Use OODA loop to:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[39m    - Act to update Task's status and result\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 41\u001b[0m     observations: \u001b[39mset\u001b[39m[Observation] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mobserve(task\u001b[39m=\u001b[39;49mtask, n_words\u001b[39m=\u001b[39;49mn_words)\n\u001b[1;32m     43\u001b[0m     \u001b[39m# note: Orient & Decide steps are practically combined to economize LM calls\u001b[39;00m\n\u001b[1;32m     44\u001b[0m     orient_result: OrientResult \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39morient(task\u001b[39m=\u001b[39mtask, observations\u001b[39m=\u001b[39mobservations,\n\u001b[1;32m     45\u001b[0m                                               knowledge\u001b[39m=\u001b[39mknowledge, n_words\u001b[39m=\u001b[39mn_words)\n",
+      "File \u001b[0;32m~/Desktop/project-local/st-openssa/openssa/openssa/l2/reasoning/ooda/__init__.py:54\u001b[0m, in \u001b[0;36mOodaReasoner.observe\u001b[0;34m(self, task, n_words)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mobserve\u001b[39m(\u001b[39mself\u001b[39m, task: ATask, n_words: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mset\u001b[39m[Observation]:\n\u001b[1;32m     53\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Observe results from available Informational Resources.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m {r\u001b[39m.\u001b[39;49mpresent_full_answer(question\u001b[39m=\u001b[39;49mtask\u001b[39m.\u001b[39;49mask, n_words\u001b[39m=\u001b[39;49mn_words) \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m task\u001b[39m.\u001b[39mresources}\n",
+      "File \u001b[0;32m~/Desktop/project-local/st-openssa/openssa/openssa/l2/resource/abstract.py:51\u001b[0m, in \u001b[0;36mAbstractResource.present_full_answer\u001b[0;34m(self, question, n_words, other_results)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpresent_full_answer\u001b[39m(\u001b[39mself\u001b[39m, question: \u001b[39mstr\u001b[39m, n_words: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m, other_results: \u001b[39mlist\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mstr\u001b[39m:\n\u001b[1;32m     42\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Present answer to posed question together with full name & overview of Informational Resource.\"\"\"\u001b[39;00m\n\u001b[1;32m     43\u001b[0m     \u001b[39mreturn\u001b[39;00m (\u001b[39m'\u001b[39m\u001b[39m======================================\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     44\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfull_name\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     45\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mhas the following overview:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     46\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m---------------------------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     47\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39moverview\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     48\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m---------------------------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     49\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mand the following other results that support the question:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     50\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m---------------------------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 51\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mother_results\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     52\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m---------------------------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     53\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     54\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfull_name\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     55\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mreturns the following answer/solution:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     56\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m--------------------------------------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     57\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39manswer(question\u001b[39m=\u001b[39mquestion,\u001b[39m \u001b[39mn_words\u001b[39m=\u001b[39mn_words)\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     58\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m--------------------------------------\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[1;32m     59\u001b[0m             \u001b[39m'\u001b[39m\u001b[39m======================================\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FileResource' object has no attribute 'other_results'"
+     ]
     }
    ],
    "source": [
