add summarize func and clean logs for better readability

--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload"
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sanity check if we have the OpenAI API setup:  True\n"
+      "Sanity check if we have the OpenAI API setup:  False\n"
      ]
     }
    ],
@@ -105,6 +96,16 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "print('Sanity check if we have the OpenAI API setup: ', load_dotenv(dotenv_path=Path('examples' if cwd_is_root else '.') / '.env'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openssa import Agent, HTP, AutoHTPlanner, OodaReasoner, FileResource\n",
+    "from openssa.utils.llms import OpenAILLM"
    ]
   },
   {
@@ -132,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "DOC_PATH = 'sample_data/3M_2022_10K/'\n",
     "PROBLEM = 'Is 3M a capital-intensive business based on FY2022 data?'\n",
-    "EXPECTED_ANSWER ='''\n",
+    "GROUTH_TRUTH_ANSWER ='''\n",
     "    No, the company is managing its CAPEX and Fixed Assets pretty efficiently,\n",
     "    which is evident from below key metrics:\n",
     "    CAPEX/Revenue Ratio: 5.1%\n",
@@ -148,22 +149,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# util function to print \n",
+    "llm=OpenAILLM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method OpenAILLM.get_default of <class 'openssa.utils.llms.OpenAILLM'>>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.client.chat.completions.create()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# util function to summarize answer\n",
+    "def summarize_ans(ans, model=\"gpt-4\", max_tokens=100):\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": \"Please summarize the following text into 1-2 sentences: \" + ans}\n",
+    "        ],\n",
+    "        max_tokens=max_tokens,\n",
+    "        temperature=0.7\n",
+    "    )\n",
+    "    summary = response['choices'][0]['message']['content']\n",
+    "    return summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# util function to print\n",
     "import textwrap\n",
-    "def print_solution(sol):\n",
+    "def print_solution(sol, present_full_answer=False):\n",
     "    print('PROBLEM: ')\n",
     "    print('====================')\n",
     "    print(PROBLEM, '\\n')\n",
-    "    print('EXPECTED ANSWER: ')\n",
+    "    print('GROUTH TRUTH ANSWER: ')\n",
     "    print('====================')\n",
-    "    print(EXPECTED_ANSWER, '\\n')\n",
-    "    print('AGENT\\'S ANSWER:')\n",
+    "    print(GROUTH_TRUTH_ANSWER, '\\n')\n",
+    "    print('AGENT\\'S SUMMARIZED ANSWER:')\n",
     "    print('====================')\n",
-    "    print(textwrap.fill(sol, 80))"
+    "    print(textwrap.fill(summarize_ans(sol), 80))\n",
+    "    if present_full_answer:\n",
+    "        print('AGENT\\'S FULL ANSWER:')\n",
+    "        print('====================')\n",
+    "        print(textwrap.fill(sol, 80))\n"
    ]
   },
   {
@@ -175,9 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/quynhle/Desktop/project-local/openssa-3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Parsing nodes: 100%|██████████| 252/252 [00:00<00:00, 929.28it/s]\n",
+      "Generating embeddings: 100%|██████████| 312/312 [00:07<00:00, 40.75it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a base agent\n",
     "agent = Agent(planner=None,\n",
@@ -190,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,35 +267,31 @@
       "====================\n",
       "Is 3M a capital-intensive business based on FY2022 data? \n",
       "\n",
-      "EXPECTED ANSWER: \n",
+      "GROUTH TRUTH ANSWER: \n",
       "====================\n",
-      "    \n",
+      "\n",
       "    No, the company is managing its CAPEX and Fixed Assets pretty efficiently,\n",
       "    which is evident from below key metrics:\n",
-      "\n",
       "    CAPEX/Revenue Ratio: 5.1%\n",
-      "\n",
       "    Fixed assets/Total Assets: 20%\n",
-      "\n",
       "    Return on Assets= 12.4% \n",
       "\n",
       "AGENT'S ANSWER:\n",
       "====================\n",
-      "Based on the FY2022 data provided in the 3M_2022_10K resource, 3M can be\n",
-      "considered a capital-intensive business. The resource indicates that 3M has made\n",
-      "significant investments in property, plant, and equipment (PP&E), which is a\n",
-      "common indicator of capital intensity. Capital spending is a direct measure of\n",
-      "how much a company is investing in its physical assets, and for 3M, the\n",
-      "substantial capital spending reflects a commitment to maintaining and expanding\n",
-      "its manufacturing and sourcing capabilities. This is further supported by the\n",
-      "company's strategic focus on aligning product capability with sales in major\n",
-      "geographic areas, which requires ongoing investment in efficient and sustainable\n",
-      "processes. Additionally, the management of pension and postretirement\n",
-      "obligations, as well as the financial impact of divestitures, special items, and\n",
-      "restructuring actions, all suggest a business that requires a significant amount\n",
-      "of capital to operate and grow. Therefore, the concrete details provided about\n",
-      "3M's investments and financial commitments in the FY2022 data support the\n",
-      "conclusion that 3M is a capital-intensive business.\n"
+      "Based on the FY2022 data provided, 3M is indeed a capital-intensive business.\n",
+      "The determination is supported by the reported capital expenditures of $1,831\n",
+      "million for the year 2022. Capital-intensive businesses are typically\n",
+      "characterized by high levels of investment in physical assets such as property,\n",
+      "plant, and equipment, which is consistent with 3M's financial statements.\n",
+      "Furthermore, the total assets of the company amounting to $46,455 million\n",
+      "underscore the significant capital employed in its operations. The investments\n",
+      "in information technology, laboratory facilities, and sustainability\n",
+      "initiatives, as well as the focus on workforce development, all point to a\n",
+      "business model that relies heavily on capital investment to drive growth,\n",
+      "efficiency, and innovation. Therefore, the concrete figures of capital\n",
+      "expenditures and total assets, along with the qualitative information about the\n",
+      "company's investments, align with the characteristics of a capital-intensive\n",
+      "business.\n"
      ]
     }
    ],
