--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -423,17 +423,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'task': 'Assess whether 3M is capital-intensive according to 2022 fiscal period data', 'sub-plans': [{'task': 'What are values in dollars of:\\n- `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)`; and\\n- `Total Assets`\\n(or most similar-meaning reported line item to those)\\n\\non one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`\\n(or most similar-meaning statement) of 3M\\n(and NOT Balance Sheets of its acquired and/or divested companies)\\n\\nas at following two annual fiscal period ends:\\n- previous annual fiscal period end immediately preceding 2022; and\\n- current 2022 annual fiscal period end?'}, {'task': 'What is value in dollars of `Capital Expenditure(s), a.k.a. CapEx, or Capital Spending, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)` (or most similar-meaning reported line item)\\non `(Consolidated) Cash Flow(s) Statement(s), a.k.a. (Consolidated) Statement(s) of Cash Flows` (or most similar-meaning statement)\\nof 3M for 2022 fiscal period?'}, {'task': 'What are values in dollars of:\\n- `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and\\n- `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`\\n(or most similar-meaning reported line items to those)\\n\\non `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,\\nor (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`\\n(or most similar-meaning statement)\\n\\nof 3M for 2022 fiscal period?'}, {'task': 'Assess whether 3M is capital-intensive according to 2022 fiscal period data\\n\\nCapital-intensive businesses tend to have one or several of the following characteristics:\\n\\n- high `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` as proportion of `Total Assets`,\\n  e.g., over 25%;\\n\\n- high `Total Assets` relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,\\n  e.g., over 2 times;\\n\\n- high `Capital Expenditure(s), a.k.a. CapEx, or Capital Spending, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)`\\n  relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,\\n  e.g., over 10%;\\n\\n  and/or\\n\\n- low `Return on (Total) Assets, a.k.a. RoA or RoTA`,\\n  e.g., under 10%,\\n  according to formula:\\n\\n  `Return on (Total) Assets, a.k.a. RoA or RoTA` = (\\n    `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)` /\\n    `average Total Assets, typically between two consecutive fiscal year-ends`\\n  )'}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yaml\n",
     "variables = {\n",
@@ -444,43 +436,20 @@
     "with open('sample_data/expert-plan-templates-sample.yml', 'r') as file:\n",
     "    EXPERT_PLAN_TEMPLATES_CONTENT = file.read()\n",
     "EXPERT_PLAN_TEMPLATES_CONTENT = EXPERT_PLAN_TEMPLATES_CONTENT.format(**variables)\n",
-    "EXPERT_PLAN = yaml.safe_load(EXPERT_PLAN_TEMPLATES_CONTENT)\n",
-    "print(EXPERT_PLAN)"
+    "EXPERT_PLAN = yaml.safe_load(EXPERT_PLAN_TEMPLATES_CONTENT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "htp = HTP.from_dict(EXPERT_PLAN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "HTP(task=Task(ask='Assess whether 3M is capital-intensive according to 2022 fiscal period data', resources=set(), nature=None, status=<TaskStatus.PENDING: 'pending'>, result=None, dynamic_decomposer=None), sub_plans=[HTP(task=Task(ask='What are values in dollars of:\\n- `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)`; and\\n- `Total Assets`\\n(or most similar-meaning reported line item to those)\\n\\non one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`\\n(or most similar-meaning statement) of 3M\\n(and NOT Balance Sheets of its acquired and/or divested companies)\\n\\nas at following two annual fiscal period ends:\\n- previous annual fiscal period end immediately preceding 2022; and\\n- current 2022 annual fiscal period end?', resources=set(), nature=None, status=<TaskStatus.PENDING: 'pending'>, result=None, dynamic_decomposer=None), sub_plans=[]), HTP(task=Task(ask='What is value in dollars of `Capital Expenditure(s), a.k.a. CapEx, or Capital Spending, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)` (or most similar-meaning reported line item)\\non `(Consolidated) Cash Flow(s) Statement(s), a.k.a. (Consolidated) Statement(s) of Cash Flows` (or most similar-meaning statement)\\nof 3M for 2022 fiscal period?', resources=set(), nature=None, status=<TaskStatus.PENDING: 'pending'>, result=None, dynamic_decomposer=None), sub_plans=[]), HTP(task=Task(ask='What are values in dollars of:\\n- `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and\\n- `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`\\n(or most similar-meaning reported line items to those)\\n\\non `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,\\nor (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`\\n(or most similar-meaning statement)\\n\\nof 3M for 2022 fiscal period?', resources=set(), nature=None, status=<TaskStatus.PENDING: 'pending'>, result=None, dynamic_decomposer=None), sub_plans=[]), HTP(task=Task(ask='Assess whether 3M is capital-intensive according to 2022 fiscal period data\\n\\nCapital-intensive businesses tend to have one or several of the following characteristics:\\n\\n- high `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` as proportion of `Total Assets`,\\n  e.g., over 25%;\\n\\n- high `Total Assets` relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,\\n  e.g., over 2 times;\\n\\n- high `Capital Expenditure(s), a.k.a. CapEx, or Capital Spending, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)`\\n  relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,\\n  e.g., over 10%;\\n\\n  and/or\\n\\n- low `Return on (Total) Assets, a.k.a. RoA or RoTA`,\\n  e.g., under 10%,\\n  according to formula:\\n\\n  `Return on (Total) Assets, a.k.a. RoA or RoTA` = (\\n    `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)` /\\n    `average Total Assets, typically between two consecutive fiscal year-ends`\\n  )', resources=set(), nature=None, status=<TaskStatus.PENDING: 'pending'>, result=None, dynamic_decomposer=None), sub_plans=[])])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from openssa import HTP\n",
     "from openssa.l2.task import Task\n",
     "\n",
     "EXPERT_HTP =  HTP(task=Task.from_dict_or_str(EXPERT_PLAN['task']),  # pylint: disable=unexpected-keyword-arg\n",
-    "                   sub_plans=[HTP.from_dict(d) for d in EXPERT_PLAN.get('sub-plans', [])])\n",
-    "\n",
-    "htp"
+    "                   sub_plans=[HTP.from_dict(d) for d in EXPERT_PLAN.get('sub-plans', [])])"
    ]
   },
   {
